# Montgomery-AI

./: .gitignore  README.md  environment.yml  grade.json  main.py  pyproject.toml  setup.py
doc/: log.md  proposal.md  revised-proposal-draft.md
files/archived/money/: input.json  predicted_tabs_full.txt  predicted_tabs_full_string.txt  predicted_tabs_tiny.txt  predicted_tabs_tiny_string.txt
files/archived/otherside/: input.json
files/archived/purplehaze/: input.json
files/archived/sweetdream/: input.json
files/cantstop/: answer.txt  chatgpt.txt  grade.json  input.json  predicted_tabs_full.txt  predicted_tabs_full_string.txt  predicted_tabs_tiny.txt  predicted_tabs_tiny_string.txt
files/satisfaction/: answer.txt  chatgpt.txt  grade.json  input.json  predicted_tabs_full.txt  predicted_tabs_full_string.txt  predicted_tabs_tiny.txt  predicted_tabs_tiny_string.txt
files/sunshine/: answer.txt  answers.json  chatgpt.txt  input.json  predicted_tabs_full.txt  predicted_tabs_full_string.txt  predicted_tabs_tiny.txt  predicted_tabs_tiny_string.txt
files/sweetchild/: answer.txt  chatgpt.txt  grade.json  input.json  predicted_tabs_full.txt  predicted_tabs_full_string.txt  predicted_tabs_tiny.txt  predicted_tabs_tiny_string.txt
src/: main.py  main2.py
src/hendraix/: main.py
src/montgomery/: colab_helper.py  crepe_helper.py  grade.py  guitar.py  helper.py  main.py  mediapipe_helper.py  sam2_helper.py
src/playground/: colab.py  crepe.py  hed.py  librosa.py  mediapipe.py  moviepy.py
