[project]
name = "hendraix"
version = "0.1.0"
description = "A project to demonstrate imports across submodules"

[build-system]
requires = [
  "setuptools>=61.0",  
  "torch>=2.3.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
hendraix = "src/hendraix"
sam2 = "src/segment-anything-2/sam2"
